feat: create container to serve app

--- a/app/docker-compose.yaml
+++ b/app/docker-compose.yaml
@@ -1,19 +1,36 @@
-version: '3.8'
+version: '3.8'  # Define la versión del formato de Docker Compose
+
+name: nyc-taxi-app  # Nombre del proyecto de la aplicación
 
 services:
   # Servicio de Frontend
   ui:
+    image: nyc-taxi-ui-image:latest  # Nombre y etiqueta de la imagen que se generará o usará
+    container_name: nyc-taxi-ui-container  # Nombre asignado al contenedor
     build:
-      context: ./UI  # Define el contexto de construcción en la carpeta "frontend"
+      context: ./UI  # Carpeta que contiene los archivos para construir la imagen del frontend
+      dockerfile: Dockerfile.ui  # Nombre del Dockerfile, relativo al contexto especificado
     ports:
-      - "8501:8501"
+      - "8501:8501"  # Mapea el puerto 8501 del host al puerto 8501 del contenedor
     depends_on:
-      - model  # Asegura que el backend esté listo antes de levantar el frontend
+      - model  # Garantiza que el contenedor 'model' (backend) se levante antes que el frontend
+    networks:
+      - nyc-taxi-network  # Conecta este servicio a la red definida
 
   # Servicio de Backend
   model:
-    container_name: "nyc-taxi-container"
+    image: nyc-taxi-model-image:latest  # Nombre y etiqueta de la imagen que se generará o usará para el backend
+    container_name: nyc-taxi-model-container  # Nombre asignado al contenedor backend
     build:
-      context: ./model  # Define el contexto de construcción en la carpeta "backend"
+      context: ./model  # Carpeta que contiene los archivos para construir la imagen del backend
+      dockerfile: Dockerfile.model  # Nombre del Dockerfile, relativo al contexto especificado
     ports:
-      - "8000:8000"  # Mapea el puerto 8000 del contenedor al puerto 8000 del host
+      - "8000:8000"  # Mapea el puerto 8000 del host al puerto 8000 del contenedor
+    networks:
+      - nyc-taxi-network  # Conecta este servicio a la red definida
+
+# Definición de redes
+networks:
+  nyc-taxi-network:  # Nombre de la red que comparten los servicios
+    name: nyc-taxi-network-1  # Nombre específico de la red
+    driver: bridge  # El tipo de red, 'bridge' permite la comunicación interna entre los contenedores
